added link to bbq

--- a/events.html
+++ b/events.html
@@ -123,14 +123,14 @@
           <article class="six columns">
                 <div class="panel shadow" id="e2">
                     <h3>9/9 - 2nd General Meeting</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/357746291040986/" target="_blank"><img src="img/events/gen-meeting-2.png"/></div>
+                    <div class="shadow2"><a href="http://facebook.com/events/357746291040986/" target="_blank"><img src="img/events/gen-meeting-2.png"/></a></div>
                 </div>
           </article>
   
           <article class="six columns">
                 <div class="panel shadow" id="e2">
                     <h3>9/13 - BBQ</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/549422955185194/" target="_blank"><img src="img/events/bbq.png"/></div>
+                    <div class="shadow2"><a href="http://facebook.com/events/549422955185194/" target="_blank"><img src="img/events/bbq.png"/></a></div>
                 </div>
           </article>
           
