--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
           
           <div class="six columns">
                 <div class="panel">
-                    <h3>9/9 - 2nd General Meeting</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/357746291040986/" target="_blank"><img src="img/events/gen-meeting-2.png"/></a></div>
+                    <h3>9/12 - Fashion Show General Meeting</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/523981157737434/" target="_blank"><img src="img/events/Fashion-Show-General-Meeting.png"/></a></div>
                 </div>
           </div>
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>9/12 - Fashion Show General Meeting</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/523981157737434/" target="_blank"><img src="img/events/Fashion-Show-General-Meeting.png"/></a></div>
+                    <h3>9/13 - BBQ</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/549422955185194/" target="_blank"><img src="img/events/bbq.png"/></a></div>
                 </div>
           </div>
   
@@ -178,11 +178,22 @@
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>9/13 - BBQ</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/549422955185194/" target="_blank"><img src="img/events/bbq.png"/></a></div>
+                    <h3>9/16 - Elevator Pitch Workshop</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/747343035305130/" target="_blank"><img src="img/events/elevator_pitch.png"/></a></div>
                 </div>
           </div>
 
+          <div class="six columns">
+                <div class="panel">
+                    <h3>9/27 - AAA/VSA Glow in the Dark Frisbee</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/701368766620455/" target="_blank"><img src="img/events/night_frisbee.png"/></a></div>
+                </div>
+          </div>
+  
+      </div>
+
+      <div class="row">
+        
           <div class="six columns">
                 <div class="panel">
                     <h3>10/16 - Meet for Tea</h3>
