--- a/richard.html
+++ b/richard.html
@@ -15,6 +15,6 @@
 		cursor: pointer;
 	}
 	</style>
-	<div id = "click" onclick="location.href='http://facebook.com/events/523981157737434/';"></div>
+	<div id = "click" onclick="location.href='http://www.facebook.com/groups/1559923917562942/';"></div>
 </body>
 </html>
