added hover text for richard

--- a/fs.html
+++ b/fs.html
@@ -497,7 +497,7 @@
          <div class="four columns panel">
             <h4>Richard Tang</h4>
             <h5>rstang2@illinois.edu</h5>
-            <a href="./richard.html">
+            <a href="./richard.html" title="click for more richard ;)">
             <img src="img/fs_coords/cropped/richard.jpg"   
             onmouseover="this.src='img/fs_coords/richard2.gif'" 
             onmouseout="this.src='img/fs_coords/cropped/richard.jpg'"></a>
