--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
           
           <div class="six columns">
                 <div class="panel">
-                    <h3>9/12 - Fashion Show General Meeting</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/523981157737434/" target="_blank"><img src="img/events/Fashion-Show-General-Meeting.png"/></a></div>
+                    <h3>9/18 - Family Meetup!</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/346385995532764/" target="_blank"><img src="img/events/Family-Meetup-2.png"/></a></div>
                 </div>
           </div>
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>9/13 - BBQ</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/549422955185194/" target="_blank"><img src="img/events/bbq.png"/></a></div>
+                    <h3>9/20 - AAA x PSA: Show Us Your Moves</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/1482221662033911/" target="_blank"><img src="img/events/aaapsa.jpg"/></a></div>
                 </div>
           </div>
   
@@ -178,25 +178,14 @@
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>9/16 - Elevator Pitch Workshop</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/747343035305130/" target="_blank"><img src="img/events/elevator_pitch.png"/></a></div>
-                </div>
-          </div>
-
-          <div class="six columns">
-                <div class="panel">
-                    <h3>9/27 - AAA/VSA Glow in the Dark Frisbee</h3>
+                    <h3>9/27 - AAA/VSA Glow in the Dark Frisbee - <a target="new" href="https://docs.google.com/forms/d/16gjsGbVj419gysH-FPkefuKNg2A03PJJFKydiS6w_jA/viewform">Sign Up!</a></h3>
                     <div class="shadow2"><a href="http://facebook.com/events/701368766620455/" target="_blank"><img src="img/events/night_frisbee.png"/></a></div>
                 </div>
           </div>
-  
-      </div>
 
-      <div class="row">
-        
           <div class="six columns">
                 <div class="panel">
-                    <h3>10/16 - Meet for Tea</h3>
+                    <h3>10/16 - Meet for Tea - <a  target="new" href="https://docs.google.com/forms/d/17vQPVk6WicMYstPcGX9tqeV3v89wDdMfA_knIZsoPVY/viewform?usp=send_form">Sign Up!</a></h3>
                     <div class="shadow2"><a href="http://facebook.com/events/705186562883523/" target="_blank"><img src="img/events/meet_for_tea.png"/></a></div>
                 </div>
           </div>
