richard analytics, slideshow pics, board pic

--- a/fs.html
+++ b/fs.html
@@ -129,7 +129,7 @@
 
       </script>
 
-      <div id="header-logo" data-0="opacity:1;" data-400="opacity:0;">
+      <div id="header-logo" data-0="opacity:.8;" data-400="opacity:0;">
           <img src="img/fs75.png" width="1000">
       </div>
 
