--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         
 <header>
       
-      <div id="header-logo" data-0="opacity:1;" data-400="opacity:0;">
+      <div id="header-logo" data-0="opacity:.8;" data-400="opacity:0;">
           <img src="img/aaa.png" width="1000">
       </div>
 
@@ -275,8 +275,9 @@
   <script type="text/javascript">
       $(document).ready(function(){
           $("header").bgswitcher({
-              images: ["img/home_slideshow/s1.jpg", "img/home_slideshow/s2.jpg", "img/home_slideshow/s3.jpg", 
-                       "img/home_slideshow/s4.jpg", "img/home_slideshow/s5.jpg"],
+              images: ["img/home_slideshow/s1.jpg", "img/home_slideshow/s3.jpg", "img/home_slideshow/s4.jpg",
+                      "img/home_slideshow/s5.jpg", "img/home_slideshow/s6.jpg", "img/home_slideshow/s7.jpg",
+                      "img/home_slideshow/s8.jpg", "img/home_slideshow/s9.jpg", "img/home_slideshow/s10.jpg"],
               shuffle: true,
               duration: 2000
           });
