--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
           
           <div class="six columns">
                 <div class="panel">
-                    <h3>9/18 - Family Meetup!</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/346385995532764/" target="_blank"><img src="img/events/Family-Meetup-2.png"/></a></div>
+                    <h3>9/26 - Cans Across The Quad</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/709898719081513/" target="_blank"><img src="img/events/cans.jpg"/></a></div>
                 </div>
           </div>
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>9/20 - AAA x PSA: Show Us Your Moves</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/1482221662033911/" target="_blank"><img src="img/events/aaapsa.jpg"/></a></div>
+                    <h3>9/27 - AAA/VSA Glow in the Dark Frisbee - <a id="su" target="new" href="https://docs.google.com/forms/d/16gjsGbVj419gysH-FPkefuKNg2A03PJJFKydiS6w_jA/viewform">Sign Up!</a></h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/701368766620455/" target="_blank"><img src="img/events/night_frisbee.png"/></a></div>
                 </div>
           </div>
   
@@ -178,8 +178,8 @@
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>9/27 - AAA/VSA Glow in the Dark Frisbee - <a target="new" href="https://docs.google.com/forms/d/16gjsGbVj419gysH-FPkefuKNg2A03PJJFKydiS6w_jA/viewform">Sign Up!</a></h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/701368766620455/" target="_blank"><img src="img/events/night_frisbee.png"/></a></div>
+                    <h3>9/28 - BSLS Family Olympiad</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/781261481912081/" target="_blank"><img src="img/events/Family-Olympiad.png"/></a></div>
                 </div>
           </div>
 
