added aaa vsa speed friending and fs tshirt design

--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
           
           <div class="six columns">
                 <div class="panel">
-                    <h3>9/26 - Cans Across The Quad</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/709898719081513/" target="_blank"><img src="img/events/cans.jpg"/></a></div>
+                    <h3>10/2 - AAA/VSA Healthy Foods &amp; Speed Friending</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/283072191893574/" target="_blank"><img src="img/events/aaavsa-speed-friending.png"/></a></div>
                 </div>
           </div>
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>9/27 - AAA/VSA Glow in the Dark Frisbee - <a id="su" target="new" href="https://docs.google.com/forms/d/16gjsGbVj419gysH-FPkefuKNg2A03PJJFKydiS6w_jA/viewform">Sign Up!</a></h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/701368766620455/" target="_blank"><img src="img/events/night_frisbee.png"/></a></div>
+                    <h3>10/16 - Meet for Tea - <a id="su" target="new" href="https://docs.google.com/forms/d/17vQPVk6WicMYstPcGX9tqeV3v89wDdMfA_knIZsoPVY/viewform?usp=send_form">Sign Up!</a></h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/705186562883523/" target="_blank"><img src="img/events/meet_for_tea.png"/></a></div>
                 </div>
           </div>
   
@@ -178,17 +178,17 @@
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>9/28 - BSLS Family Olympiad</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/781261481912081/" target="_blank"><img src="img/events/Family-Olympiad.png"/></a></div>
+                    <h3>10/26 - Fashion Show T-Shirt Design Contest</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/1489336891315585/" target="_blank"><img src="img/events/fs-shirt-design-contest.jpg"/></a></div>
                 </div>
           </div>
 
-          <div class="six columns">
+<!--           <div class="six columns">
                 <div class="panel">
                     <h3>10/16 - Meet for Tea - <a  target="new" href="https://docs.google.com/forms/d/17vQPVk6WicMYstPcGX9tqeV3v89wDdMfA_knIZsoPVY/viewform?usp=send_form">Sign Up!</a></h3>
                     <div class="shadow2"><a href="http://facebook.com/events/705186562883523/" target="_blank"><img src="img/events/meet_for_tea.png"/></a></div>
                 </div>
-          </div>
+          </div> -->
   
       </div>
 
