--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
           
           <div class="six columns">
                 <div class="panel">
-                    <h3>10/2 - AAA/VSA Healthy Foods &amp; Speed Friending</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/283072191893574/" target="_blank"><img src="img/events/aaavsa-speed-friending.png"/></a></div>
+                    <h3>10/16 - Meet for Tea - <a id="su" target="new" href="https://docs.google.com/forms/d/17vQPVk6WicMYstPcGX9tqeV3v89wDdMfA_knIZsoPVY/viewform?usp=send_form">Sign Up!</a></h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/705186562883523/" target="_blank"><img src="img/events/meet_for_tea.png"/></a></div>
                 </div>
           </div>
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>10/16 - Meet for Tea - <a id="su" target="new" href="https://docs.google.com/forms/d/17vQPVk6WicMYstPcGX9tqeV3v89wDdMfA_knIZsoPVY/viewform?usp=send_form">Sign Up!</a></h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/705186562883523/" target="_blank"><img src="img/events/meet_for_tea.png"/></a></div>
+                    <h3>10/18 - AAA/AASHO League of Legends 2014 World Championship Finals Watch Party</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/712533808832494/" target="_blank"><img src="img/events/league.jpg"/></a></div>
                 </div>
           </div>
   
