japan house, study abroad

--- a/index.html
+++ b/index.html
@@ -167,6 +167,24 @@
 
           <div class="six columns">
                 <div class="panel">
+                    <h3>10/18 - Japan House</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/1553645668201893/" target="_blank"><img src="img/events/japan-house.jpg"/></a></div>
+                </div>
+          </div>
+  
+      </div>
+
+      <div class="row">
+          
+          <div class="six columns">
+                <div class="panel">
+                    <h3>10/18 - Study Night</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/1523958851176722/" target="_blank"><img src="img/events/Study-Night.png"/></a></div>
+                </div>
+          </div>
+
+          <div class="six columns">
+                <div class="panel">
                     <h3>10/18 - AAA/AASHO League of Legends 2014 World Championship Finals Watch Party</h3>
                     <div class="shadow2"><a href="http://facebook.com/events/712533808832494/" target="_blank"><img src="img/events/league.jpg"/></a></div>
                 </div>
@@ -175,6 +193,13 @@
       </div>
 
       <div class="row">
+
+          <div class="six columns">
+                <div class="panel">
+                    <h3>10/20 - AAA,PSA,VSA,TASC Learn to Study Abroad</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/736092066480081/" target="_blank"><img src="img/events/Study-Abroad.png"/></a></div>
+                </div>
+          </div>
 
           <div class="six columns">
                 <div class="panel">
