--- a/events.html
+++ b/events.html
@@ -111,6 +111,24 @@
 
           <article class="six columns" id="e1">
                 <div class="panel shadow">
+                    <h3>10/18 - Japan House</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/1553645668201893/" target="_blank"><img src="img/events/japan-house.jpg"/></a></div>
+                </div>
+          </article>      
+
+      </div>
+
+      <div class="row">
+      
+          <article class="six columns" id="e1">
+                <div class="panel shadow">
+                    <h3>10/18 - Study Night</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/1523958851176722/" target="_blank"><img src="img/events/Study-Night.png"/></a></div>
+                </div>
+          </article>    
+
+          <article class="six columns" id="e1">
+                <div class="panel shadow">
                     <h3>10/18 - AAA/AASHO League of Legends 2014 World Championship Finals Watch Party</h3>
                     <div class="shadow2"><a href="http://facebook.com/events/712533808832494/" target="_blank"><img src="img/events/league.jpg"/></a></div>
                 </div>
@@ -123,6 +141,13 @@
           <style>
             #su{color: #b1b1b1}
           </style>
+
+          <article class="six columns" id="e1">
+                <div class="panel shadow">
+                    <h3>10/20 - AAA,PSA,VSA,TASC Learn to Study Abroad</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/736092066480081/" target="_blank"><img src="img/events/Study-Abroad.png"/></a></div>
+                </div>
+          </article> 
 
           <article class="six columns" id="e1">
                 <div class="panel shadow">
