--- a/fs.html
+++ b/fs.html
@@ -282,6 +282,7 @@
       <div class="row">
         <div class="column twelve">
           <h2>Get in touch with your cultural side in this diverse scene. Interested in learning dances from all over Asia, then look no further! Here you will immerse yourself in something different and, in the process, appreciate the different methods of expression these cultures have. Make new friends and learn something new together!</h2>
+          <h3>For practice updates, email us at: cultural.aaa@gmail.com</h3>
         </div>
       </div>
 
@@ -349,6 +350,7 @@
       <div class="row">
         <div class="column twelve">
           <h2>Tap in to the world of hip-hop through a unique and engaging way! Here you will get a taste of the various styles of street dancing applied to your favorite songs. Throw yourself out there and learn to move your body to the hard-hitting, but sometimes smooth, choreography we have planned for you this year.</h2>
+          <h3>For practice updates, email us at: aaa.nightlife@gmail.com</h3>
         </div>
       </div>
 
@@ -410,6 +412,7 @@
       <div class="row">
         <div class="column twelve">
           <h2>Step out of your comfort zone! Formal scene's partner dances will encourage you to get comfortable with moving your body in sync with your partner. Put your best smile on as you work together to learn to the sexy tango, energetic swing, and much more!</h2>
+          <h3>For practice updates, email us at: aaa.formalscene@gmail.com</h3>
         </div>
       </div>
 
@@ -471,6 +474,7 @@
       <div class="row">
         <div class="column twelve">
           <h2>Let's make it big!!! It's Broadway scene, everything must be bigger. Bigger atmosphere, bigger emotions, bigger movement! Expose your classy side with smooth jazz choreography. Don't be afraid to break a leg, that's showbiz!</h2>
+          <h3>For practice updates, email us at: aaa.bdwy@gmail.com</h3>
         </div>
       </div>
 
@@ -535,6 +539,7 @@
       <div class="row">
         <div class="column twelve">
           <h2>Feeling expressive? Modern scene is designed to get you in touch with your emotions and the dancer we all have hidden inside! Get ready to touch the audience with a dramatic mix of lyrical hiphop and contemporary choreography!</h2>
+          <h3>For practice updates, email us at: aaa.modernscene@gmail.com</h3>
         </div>
       </div>
 
@@ -631,8 +636,6 @@
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="http://www.uiucapac.com/affiliates.html" target="_blank">Affiliates</a></li>
             </ul>   
-    </div>
-
     </div>
     
 </footer> 	  
