halloween, ctf, semiformal, hide/show past events

--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>10/26 - Homecoming Brunch with AAA Alumni</h3>
-                    <div class="shadow2"><a href="https://www.facebook.com/events/783012815092143/" target="_blank"><img src="img/events/homecoming-brunch.png"/></a></div>
+                    <h3>10/29 - Fashion Show T-Shirt Design Contest</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/1489336891315585/" target="_blank"><img src="img/events/fs-shirt-design-contest.png"/></a></div>
                 </div>
           </div>
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>10/26 - Fashion Show T-Shirt Design Contest</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/1489336891315585/" target="_blank"><img src="img/events/fs-shirt-design-contest.png"/></a></div>
+                    <h3>10/30 - Night Before Halloween for Relay for Life</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/781377055257206/" target="_blank"><img src="img/events/Halloween.png"/></a></div>
                 </div>
           </div>
           
@@ -178,19 +178,19 @@
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>10/27 - Mia Za's Fundraiser with AAA</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/341019899404163/" target="_blank"><img src="img/events/mia-zas.png"/></a></div>
+                    <h3>11/02 - Capture the Flag Tournament</h3>
+                    <div class="shadow2"><a href="https://www.facebook.com/events/909106205768739/" target="_blank"><img src="img/events/CTF.png"/></a></div>
+                </div>
+          </div>
+
+          <div class="six columns">
+                <div class="panel">
+                    <h3>11/07 - AAA+VSA Semiformal: Wish Upon a Star</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/349016401923358/" target="_blank"><img src="img/events/semiformal.png"/></a></div>
                 </div>
           </div>
           
       </div>
-
-<!--           <div class="six columns">
-                <div class="panel">
-                    <h3>10/16 - Meet for Tea - <a  target="new" href="https://docs.google.com/forms/d/17vQPVk6WicMYstPcGX9tqeV3v89wDdMfA_knIZsoPVY/viewform?usp=send_form">Sign Up!</a></h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/705186562883523/" target="_blank"><img src="img/events/meet_for_tea.png"/></a></div>
-                </div>
-          </div> -->
 
 </section>        
 
