--- a/events.html
+++ b/events.html
@@ -119,7 +119,7 @@
           
       </div>
 
-      <div class="row" style="padding-bottom: 0px">  
+      <div class="row">  
 
           <article class="six columns" id="e1">
                 <div class="panel shadow">
@@ -130,7 +130,18 @@
 
           <article class="six columns" id="e1">
                 <div class="panel shadow">
-                    <h3>11/07 - AAA+VSA Semiformal: Wish Upon a Star</h3>
+                    <h3>11/06 - AAA Family Potluck</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/843801788997772/" target="_blank"><img src="img/events/bsls-potluck.png"/></a></div>
+                </div>
+          </article>
+          
+      </div>
+
+      <div class="row" style="padding-bottom: 0px">  
+
+          <article class="six columns" id="e1">
+                <div class="panel shadow">
+                    <h3>11/07 - AAA/VSA Semiformal: Wish Upon a Star</h3>
                     <div class="shadow2"><a href="http://facebook.com/events/349016401923358/" target="_blank"><img src="img/events/semiformal.png"/></a></div>
                 </div>
           </article>
@@ -168,7 +179,7 @@
 
           <article class="six columns" id="e1">
                 <div class="panel shadow">
-                    <h3>10/20 - AAA,PSA,VSA,TASC Learn to Study Abroad</h3>
+                    <h3>10/20 - AAA, PSA, VSA Learn to Study Abroad</h3>
                     <div class="shadow2"><a href="http://facebook.com/events/736092066480081/" target="_blank"><img src="img/events/Study-Abroad.png"/></a></div>
                 </div>
           </article>
