--- a/index.html
+++ b/index.html
@@ -185,7 +185,18 @@
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>11/07 - AAA+VSA Semiformal: Wish Upon a Star</h3>
+                    <h3>11/06 - AAA Family Potluck</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/843801788997772/" target="_blank"><img src="img/events/bsls-potluck.png"/></a></div>
+                </div>
+          </div>
+          
+      </div>
+
+      <div class="row">  
+
+          <div class="six columns">
+                <div class="panel">
+                    <h3>11/07 - AAA/VSA Semiformal: Wish Upon a Star</h3>
                     <div class="shadow2"><a href="http://facebook.com/events/349016401923358/" target="_blank"><img src="img/events/semiformal.png"/></a></div>
                 </div>
           </div>
