sports chairs and fs head coord email and fb group

--- a/fs.html
+++ b/fs.html
@@ -164,6 +164,39 @@
         </div>
       </div>
 
+      <div class="row" style="padding: 20px 30px">
+        
+        <div class="six column">
+          <a href="mailto:fs.headcoord@gmail.com" target="new">
+            <div class="row">
+              <div class="one column"></div>
+              <div class="three columns">
+                <img src="img/contact/email4.png">
+              </div>
+              <div class="six columns swag" style="margin-top:15px">
+                <h3>fs.headcoord@gmail.com</h3>
+              </div>
+              <div class="two column"></div>
+            </div>
+          </a>
+        </div>
+
+        <div class="six column">
+          <a href="http://www.facebook.com/groups/1559923917562942/" target="new">
+            <div class="row">
+              <div class="three columns">
+                <img src="img/contact/facebook2.png">
+              </div>
+              <div class="seven columns swag" style="margin-top:15px">
+                <h3>Join Our Facebook Group!</h3>
+              </div>
+              <div class="two column"></div>
+            </div>
+          </a>
+        </div>
+
+      </div>
+
       <div class="row">
         <div class="column twelve">
           <h3>View upcoming events and meetings for Fashion Show:</h3>
