made youtube video in fs page responsive

--- a/fs.html
+++ b/fs.html
@@ -156,14 +156,28 @@
 
       <div class="row" style="text-align:center">
         <div class="column twelve">
-          <div class="fsd">
-            <iframe style="margin: 20px" width="853" height="480" src="http://www.youtube.com/embed/sacW9_4t26M" frameborder="0" allowfullscreen></iframe>
-          </div>
-          <div class="fsm">
-            <iframe style="margin: 20px" width="297" height="167" src="http://www.youtube.com/embed/sacW9_4t26M" frameborder="0" allowfullscreen></iframe>
+          <div class="videoWrapper">
+            <iframe width="853" height="480" src="http://www.youtube.com/embed/sacW9_4t26M" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
+
+      <style type="text/css">
+        .videoWrapper {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 */
+            padding-top: 25px;
+            height: 0;
+            margin: 20px 0;
+        }
+        .videoWrapper iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+      </style>
 
       <div class="row">
         <div class="column twelve">
@@ -211,14 +225,14 @@
 
             <a href="mailto:fs.headcoord@gmail.com" target="new">
             <div class="contact-info-mobile cims" style="padding-bottom: 15px;">
-              <img src="img/contact/email4.png" style="margin-left: 25px;">
+              <img src="img/contact/email4.png" style="margin-left: 5px;">
               <h3>fs.headcoord@gmail.com</h3>
             </div>
             </a>
 
             <a href="http://www.facebook.com/groups/1559923917562942/">
             <div class="contact-info-mobile cims" style="padding-bottom:15px;">
-              <img src="img/contact/facebook2.png" style="margin-left: 25px;">
+              <img src="img/contact/facebook2.png" style="margin-left: 5px;">
               <h3>Join Our Facebook Group!</h3>            
             </div>
             </a>
@@ -398,14 +412,14 @@
 
             <a href="mailto:cultural.aaa@gmail.com" target="new">
             <div class="contact-info-mobile cims" style="padding-bottom: 15px;">
-              <img src="img/contact/email4.png" style="margin-left: 25px;">
+              <img src="img/contact/email4.png" style="margin-left: 5px;">
               <h3>cultural.aaa@gmail.com</h3>
             </div>
             </a>
 
             <a href="http://www.facebook.com/groups/534005643400838/">
             <div class="contact-info-mobile cims" style="padding-bottom:15px;">
-              <img src="img/contact/facebook2.png" style="margin-left: 25px;">
+              <img src="img/contact/facebook2.png" style="margin-left: 5px;">
               <h3>Join Our Facebook Group!</h3>            
             </div>
             </a>
@@ -522,14 +536,14 @@
 
             <a href="mailto:aaa.nightlife@gmail.com" target="new">
             <div class="contact-info-mobile cims" style="padding-bottom: 15px;">
-              <img src="img/contact/email4.png" style="margin-left: 25px;">
+              <img src="img/contact/email4.png" style="margin-left: 5px;">
               <h3>aaa.nightlife@gmail.com</h3>
             </div>
             </a>
 
             <a href="http://www.facebook.com/groups/1499491666957617/">
             <div class="contact-info-mobile cims" style="padding-bottom:15px;">
-              <img src="img/contact/facebook2.png" style="margin-left: 25px;">
+              <img src="img/contact/facebook2.png" style="margin-left: 5px;">
               <h3>Join Our Facebook Group!</h3>            
             </div>
             </a>
@@ -640,14 +654,14 @@
 
             <a href="mailto:aaa.formalscene@gmail.com" target="new">
             <div class="contact-info-mobile cims" style="padding-bottom: 15px;">
-              <img src="img/contact/email4.png" style="margin-left: 25px;">
+              <img src="img/contact/email4.png" style="margin-left: 5px;">
               <h3>aaa.formalscene@gmail.com</h3>
             </div>
             </a>
 
             <a href="http://www.facebook.com/groups/1460097930901454/">
             <div class="contact-info-mobile cims" style="padding-bottom:15px;">
-              <img src="img/contact/facebook2.png" style="margin-left: 25px;">
+              <img src="img/contact/facebook2.png" style="margin-left: 5px;">
               <h3>Join Our Facebook Group!</h3>            
             </div>
             </a>
@@ -758,14 +772,14 @@
 
             <a href="mailto:aaa.bdwy@gmail.com" target="new">
             <div class="contact-info-mobile cims" style="padding-bottom: 15px;">
-              <img src="img/contact/email4.png" style="margin-left: 25px;">
+              <img src="img/contact/email4.png" style="margin-left: 5px;">
               <h3>aaa.bdwy@gmail.com</h3>
             </div>
             </a>
 
             <a href="http://www.facebook.com/groups/605903669518623/">
             <div class="contact-info-mobile cims" style="padding-bottom:15px;">
-              <img src="img/contact/facebook2.png" style="margin-left: 25px;">
+              <img src="img/contact/facebook2.png" style="margin-left: 5px;">
               <h3>Join Our Facebook Group!</h3>            
             </div>
             </a>
@@ -879,14 +893,14 @@
 
             <a href="mailto:aaa.modernscene@gmail.com" target="new">
             <div class="contact-info-mobile cims" style="padding-bottom: 15px;">
-              <img src="img/contact/email4.png" style="margin-left: 25px;">
+              <img src="img/contact/email4.png" style="margin-left: 5px;">
               <h3>aaa.modernscene@gmail.com</h3>
             </div>
             </a>
 
             <a href="http://www.facebook.com/groups/605727246202932/">
             <div class="contact-info-mobile cims" style="padding-bottom:15px;">
-              <img src="img/contact/facebook2.png" style="margin-left: 25px;">
+              <img src="img/contact/facebook2.png" style="margin-left: 5px;">
               <h3>Join Our Facebook Group!</h3>            
             </div>
             </a>
