--- a/index.html
+++ b/index.html
@@ -152,11 +152,13 @@
 
       <div class="row">
         <div class="column twelve">
-          <h1>Upcoming Events</h1>
+         <!--  <h1>Upcoming Events</h1> -->
+          <h1>Have A Great Thanksgiving Break!</h1>
+          <h1 style="text-align:center; padding-top:10px">See you after break!</h1>
         </div>
       </div>
       
-      <div class="row">  
+      <!-- <div class="row">  
 
           <div class="six columns">
                 <div class="panel">
@@ -172,7 +174,7 @@
                 </div>
           </div>
           
-      </div>
+      </div> -->
 
 </section>        
 
