for winter break

--- a/index.html
+++ b/index.html
@@ -153,8 +153,10 @@
       <div class="row">
         <div class="column twelve">
          <!--  <h1>Upcoming Events</h1> -->
-          <h1>Have A Great Thanksgiving Break!</h1>
-          <h1 style="text-align:center; padding-top:10px">See you after break!</h1>
+          <!-- <h1>Have A Great Thanksgiving Break!</h1>
+          <h1 style="text-align:center; padding-top:10px">See you after break!</h1> -->
+
+          <img style="padding: 50px 0" src="img/Board-Holiday-Card.jpg">
         </div>
       </div>
       
