changed index to home

--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
      <div style="position:fixed" class="twelve columns header_nav">
          <div class="row">
                <ul id="menu-header" class="nav-bar horizontal">
-                     <li><a href="index.html">Home</a></li>
+                     <li><a href="home.html">Home</a></li>
                      <li><a href="about.html">About</a></li>
                      <li><a href="board.html">The Board</a></li>
                      <li class="active"><a href="events.html">Events</a></li>
@@ -84,7 +84,7 @@
 <nav>
       <h3 id="title">Events</h3>
       <ul id="menu">
-         <li><a href="index.html">Home</a></li>
+         <li><a href="home.html">Home</a></li>
          <li><a href="about.html">About</a></li>
          <li><a href="board.html">The Board</a></li>
          <li><a href="events.html">Events</a></li>
@@ -586,7 +586,7 @@
     <div class="two column">
         <h3>Navigation</h3>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="board.html">The Board</a></li>
                 <li><a href="events.html">Events</a></li>
