--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
      <div style="position:fixed" class="twelve columns header_nav">
          <div class="row">
                <ul id="menu-header" class="nav-bar horizontal">
-                     <li><a href="index.html">Home</a></li>
+                     <li><a href="home.html">Home</a></li>
                      <li class="active"><a href="about.html">About</a></li>
                      <li><a href="board.html">The Board</a></li>
                      <li><a href="events.html">Events</a></li>
@@ -73,7 +73,7 @@
 <nav>
       <h3 id="title">About AAA</h3>
       <ul id="menu">
-         <li><a href="index.html">Home</a></li>
+         <li><a href="home.html">Home</a></li>
          <li><a href="about.html">About</a></li>
          <li><a href="board.html">The Board</a></li>
          <li><a href="events.html">Events</a></li>
@@ -324,7 +324,7 @@
     <div class="two column">
         <h3>Navigation</h3>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="board.html">The Board</a></li>
                 <li><a href="events.html">Events</a></li>
