--- a/fs.html
+++ b/fs.html
@@ -115,7 +115,7 @@
               vpw = $(window).width();
               $('header').css({'height': vph + 'px'});
               //alert("height:" + vph +" width:" + vpw + " nav bar height:" + $('.nav-bar').height() + " logo height:" + $('#header-logo img').height() + "logo width:" + $('#header-logo img').width());
-              $('#header-logo').css({'top': vph/2 - 92 + $('.nav-bar').height()/2 + 'px'});
+              $('#header-logo').css({'top': vph/2 - 270 + $('.nav-bar').height()/2 + 'px'});
               $('#header-logo').css({'left': vpw/2 - $('#header-logo img').width()/2 + 'px'});
           }
 
@@ -129,8 +129,8 @@
 
       </script>
 
-      <div id="header-logo" data-0="opacity:.8;" data-400="opacity:0;">
-          <img src="img/fs75.png" width="1000">
+      <div id="header-logo" data-0="opacity:1;" data-400="opacity:0;">
+          <img src="img/fs_logo.png" width="1000">
       </div>
 
       <style type="text/css">
