added skaaating event

--- a/home.html
+++ b/home.html
@@ -152,31 +152,31 @@
 
       <div class="row">
         <div class="column twelve">
-         <!--  <h1>Upcoming Events</h1> -->
+           <h1>Upcoming Events</h1>
           <!-- <h1>Have A Great Thanksgiving Break!</h1>
           <h1 style="text-align:center; padding-top:10px">See you after break!</h1> -->
 
-          <img style="padding: 50px 0" src="img/Board-Holiday-Card.jpg">
+          <!-- <img style="padding: 50px 0" src="img/Board-Holiday-Card.jpg"> -->
         </div>
       </div>
       
-      <!-- <div class="row">  
+       <div class="row">  
 
           <div class="six columns">
                 <div class="panel">
-                    <h3>11/14 - AAAPalooza</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/729263263823319/" target="_blank"><img src="img/events/aaapalooza.jpg"/></a></div>
+                    <h3>2/4 - Family Ice SkAAAting!</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/638517599587852/" target="_blank"><img src="img/events/skAAAting.png"/></a></div>
                 </div>
           </div>
 
-          <div class="six columns">
+          <!-- <div class="six columns">
                 <div class="panel">
                     <h3>11/18 - Make Your Own Kdrama</h3>
                     <div class="shadow2"><a href="http://facebook.com/events/730713730338818/" target="_blank"><img src="img/events/kdrama-web.png"/></a></div>
                 </div>
-          </div>
+          </div> -->
           
-      </div> -->
+      </div> 
 
 </section>        
 
