--- a/home.html
+++ b/home.html
@@ -169,12 +169,12 @@
                 </div>
           </div>
 
-          <!-- <div class="six columns">
+          <div class="six columns">
                 <div class="panel">
-                    <h3>11/18 - Make Your Own Kdrama</h3>
-                    <div class="shadow2"><a href="http://facebook.com/events/730713730338818/" target="_blank"><img src="img/events/kdrama-web.png"/></a></div>
+                    <h3>2/9 - Interview Workshop</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/375700992608800/" target="_blank"><img src="img/events/Interview-Workshop.png"/></a></div>
                 </div>
-          </div> -->
+          </div>
           
       </div> 
 
