--- a/home.html
+++ b/home.html
@@ -178,6 +178,17 @@
           
       </div> 
 
+      <div class="row">  
+
+          <div class="six columns">
+                <div class="panel">
+                    <h3>3/7 - Fashion Show: Not Just An Asian Affair</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/1413196032307959/" target="_blank"><img src="img/events/FS-Event.png"/></a></div>
+                </div>
+          </div>
+          
+      </div> 
+
 </section>        
 
 <!-- ######################## Footer ######################## -->  
