--- a/events.html
+++ b/events.html
@@ -131,6 +131,31 @@
 
           <article class="six columns" id="e1">
                 <div class="panel shadow">
+                    <h3>2/11 - AAA 2nd Semester General Meeting</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/537752846328011/" target="_blank"><img src="img/events/2nd-Sem-Gen-Meeting.png"/></a></div>
+                </div>
+          </article>
+
+          <article class="six columns" id="e1">
+                <div class="panel shadow">
+                    <h3>2/15 - TASC &amp; AAA Restaurant Night</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/646131698849230/" target="_blank"><img src="img/events/Restaurant-Night.png"/></a></div>
+                </div>
+          </article>
+          
+      </div>
+
+      <div class="row" style="padding-bottom: 0px">  
+
+          <article class="six columns" id="e1">
+                <div class="panel shadow">
+                    <h3>2/16 - AAA Celebrates Lunar New Year 2015</h3>
+                    <div class="shadow2"><a href="http://facebook.com/events/1589428044622096/" target="_blank"><img src="img/events/lunar-new-year.png"/></a></div>
+                </div>
+          </article>
+
+          <article class="six columns" id="e1">
+                <div class="panel shadow">
                     <h3>3/7 - Fashion Show: Not Just An Asian Affair</h3>
                     <div class="shadow2"><a href="http://facebook.com/events/1413196032307959/" target="_blank"><img src="img/events/FS-Event.png"/></a></div>
                 </div>
