--- a/events.html
+++ b/events.html
@@ -138,7 +138,7 @@
 
           <article class="six columns" id="e1">
                 <div class="panel shadow">
-                    <h3>2/15 - TASC &amp; AAA Restaurant Night</h3>
+                    <h3>2/15 - TASC &amp; AAA Restaurant Night - <a id="su" target="new" href="http://goo.gl/forms/Qpe6w8YUzv">Sign Up!</a></h3>
                     <div class="shadow2"><a href="http://facebook.com/events/646131698849230/" target="_blank"><img src="img/events/Restaurant-Night.png"/></a></div>
                 </div>
           </article>
