--- a/home.html
+++ b/home.html
@@ -214,6 +214,20 @@
           
       </div> 
 
+      <div class="row" style="padding:0px">
+        <div class="column twelve">
+           <h1>Introducing: Broadway Scene!</h1>
+        </div>
+      </div>
+
+      <div class="row" style="text-align:center; padding-bottom: 50px">
+        <div class="column twelve">
+          <div class="videoWrapper">
+            <iframe width="853" height="480" src="http://www.youtube.com/embed/qFHiBz55yXU" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
 </section>        
 
 <!-- ######################## Footer ######################## -->  
