cultural video no tabs

--- a/fs.html
+++ b/fs.html
@@ -176,6 +176,20 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="column twelve">
+          <h2>Introducing: Cultural Scene!</h2>
+        </div>
+      </div>
+
+      <div class="row" style="text-align:center">
+        <div class="column twelve">
+          <div class="videoWrapper">
+            <iframe width="853" height="480" src="http://www.youtube.com/embed/mpY4b_vuERM" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
       <style type="text/css">
         .videoWrapper {
             position: relative;
