--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
   <script src="js/modernizr.foundation.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/fastclick.js"></script>
+  <script src="js/foundation.min.js" type="text/javascript"></script> 
 
   <link rel="stylesheet" href="css/slicknav.css"/>
   <script src="js/jquery.slicknav.min.js"></script>
@@ -214,7 +215,42 @@
           
       </div> 
 
-      <div class="row" style="padding:0px">
+      <!-- <ul class="tabs" data-tab>
+        <li class="tab-title active"><a href="#panel1">Broadway Scene</a></li>
+        <li class="tab-title"><a href="#panel2">Cultural Scene</a></li>
+      </ul> -->
+      <div class="tabs-content">
+        <div class="content active" id="panel1">
+            <div class="row" style="padding:0px">
+              <div class="column twelve">
+                 <h1>Introducing: Broadway Scene!</h1>
+              </div>
+            </div>
+            <div class="row" style="text-align:center;">
+              <div class="column twelve">
+                <div class="videoWrapper">
+                  <iframe width="853" height="480" src="http://www.youtube.com/embed/qFHiBz55yXU" frameborder="0" allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="content" id="panel2">
+          <div class="row" style="padding:0px">
+              <div class="column twelve">
+                 <h1>Introducing: Cultural Scene!</h1>
+              </div>
+            </div>
+            <div class="row" style="text-align:center; padding-bottom: 50px">
+              <div class="column twelve">
+                <div class="videoWrapper">
+                  <iframe width="853" height="480" src="http://www.youtube.com/embed/mpY4b_vuERM" frameborder="0" allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+
+     <!--  <div class="row" style="padding:0px">
         <div class="column twelve">
            <h1>Introducing: Broadway Scene!</h1>
         </div>
@@ -226,7 +262,7 @@
             <iframe width="853" height="480" src="http://www.youtube.com/embed/qFHiBz55yXU" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
-      </div>
+      </div> -->
 
 </section>        
 
@@ -300,7 +336,7 @@
 
 <!-- ######################## Scripts ######################## --> 
 
-  <script src="js/foundation.min.js" type="text/javascript"></script> 
+  
   <script src="js/app.js" type="text/javascript"></script>
 
   <script type="javascript">
